src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
export type NotSubscription = {
  /** @gqlField */
  greetings: AsyncIterable<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts:4:14 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

4   greetings: AsyncIterable<string>;
               ~~~~~~~~~~~~~~~~~~~~~
